Fixed overflow bug which was hiding part of the map on tour.html

--- a/www/css/style.less
+++ b/www/css/style.less
@@ -495,8 +495,8 @@ td { vertical-align: top; }
   .map {
     overflow: hidden;
     position: absolute;
-    width: 2624px;
-    height: 1612px;
+    width: 2900px;
+    height: 1900px;
     cursor: move;
     
     .tile {
